// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "com.datmesh";
option go_package = "github.com/ibm/the-mesh-for-data/pkg/connectors/protobuf";

import "credentials.proto";
import "dataset_details.proto";

message RegisterAssetRequest {
	Credentials creds = 1;
	DatasetDetails dataset_details = 2; 	
	string destination_catalog_id = 3;
	string app_id = 4;   // reference to user credentials
}
